# dnd-ai-local

./: .env.example  .gitignore  Cargo.toml  buildandtest.ps1  ollama_benchmark.ps1
benchmark results/: benchmark_results_2026-01-16_1224.json  benchmark_results_2026-01-16_1226.json  benchmark_results_2026-01-16_1316.json
crates/ddai_cli/: Cargo.toml
crates/ddai_cli/src/: main.rs
crates/ddai_core/: Cargo.toml
crates/ddai_embed/: Cargo.toml
crates/ddai_ingest/: Cargo.toml
crates/ddai_ingest/src/: dnd5eapi.rs  lib.rs
crates/ddai_llm/: Cargo.toml
crates/ddai_llm/src/: lib.rs
crates/ddai_retrieve/: Cargo.toml
crates/ddai_store/: Cargo.toml
crates/ddai_store/src/: lib.rs
patches/: patch_2026-01-16_1017.txt  patch_2026-01-16_1052.txt  patch_2026-01-16_1119.txt  patch_2026-01-16_1129.txt  patch_2026-01-16_1428.txt
prompts/: rules_qa.md  system.md
terminal captures/: terminalcapture_2026-01-15_1420.md  terminalcapture_2026-01-15_1450.md  terminalcapture_2026-01-16_0904.md  terminalcapture_2026-01-16_1032.md  terminalcapture_2026-01-16_1037.md  terminalcapture_2026-01-16_1040.md  terminalcapture_2026-01-16_1043.md  terminalcapture_2026-01-16_1101.md  terminalcapture_2026-01-16_1103.md  terminalcapture_2026-01-16_1122.md  terminalcapture_2026-01-16_1138.md  terminalcapture_2026-01-16_1155.md  terminalcapture_2026-01-16_1335.md  terminalcapture_2026-01-16_1359.md  terminalcapture_2026-01-16_1418.md  terminalcapture_2026-01-16_1444.md  terminalcapture_2026-01-16_1501.md  terminalcapture_2026-01-16_1505.md  terminalcapture_2026-01-16_1510.md
