[package]
name = "ddai_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ddai_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ddai_store = { path = "../ddai_store" }
ddai_ingest = { path = "../ddai_ingest" }
ddai_llm = { path = "../ddai_llm" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
