[package]
name = "ddai_ingest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ddai_store = { path = "../ddai_store" }